--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <h2 class="mb-4">Render Your Website</h2>
-        <p>To get your token, visit: <a href="https://lelbois.nekoweb.org/token.html" target="_blank">Get Token</a></p>
+        <p>To get your token, visit: <a href="./token.html" target="_blank">Get Token</a></p>
         <div class="form-group">
             <label for="token">Enter Your Token (Base64 URL Encoded Source Code)</label>
             <textarea class="form-control" id="token" rows="6" placeholder="Paste your website's source code here (base64 URL encoded)" required></textarea>
